# social_layers

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
cfg/: InteractionLayer.cfg  ObjectsLayer.cfg  PeopleLayer.cfg  SocialLayer.cfg
include/social_layers/: interaction_layer.h  objects_layer.h  people_layer.h  social_layer.h  util.h
src/: interaction_layer.cpp  objects_layer.cpp  people_layer.cpp  social_layer.cpp
