<package format="2">
  <name>social_layers</name>
  <version>0.0.1</version>
  <description>
  Plugin-based layers for the navigation stack that
  implement various social navigation contraints, like proxemic distance.
  Based in the social_layers by David V. Lu!!
  </description>
  <author email="me@email.com">me</author>
  <maintainer email="me@email.com">me</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>social_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>
